@@ -2204,6 +2204,8 @@ apps-6.3 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
     * apps/interpreter: Add a directory to hold interpreters.  The Pascal add-
       on module now installs and builds under this directory.
+    * apps/interpreter/ficl: Added logic to build Ficl (the "Forth Inspired
+      Command Language").  See http://ficl.sourceforge.net/.
 
 pascal-3.0 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
